Alignment of text in course comparison entry info box plus other bugs in course comparison

--- a/courses/static/scss/course_comparison.scss
+++ b/courses/static/scss/course_comparison.scss
@@ -300,7 +300,7 @@
         font-size:0.8rem!important;
     }
     .entry-information__chart-label{
-        text-align: left!important;
+        text-align: left;
     }
     .employment-after-course__stats-heading{
         font-size:1.1rem!important;
